Chore: merge master to new theme branch (#2442)
* Feature/project release management (#2431)

* feat(common): add common components listSelect

* feat(dop): project release management

* feat: code optimization

* feat: add listSelect unit test case

* fix: code optimization

* fix(dop): project release management bug (#2441)

Co-authored-by: hujiahao-hjh <82502479+hujiahao-hjh@users.noreply.github.com>

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -730,6 +730,7 @@
     "item": "item",
     "items": "items",
     "key value must be unique": "key value must be unique",
+    "keyword to search": "keyword to search",
     "lack of english colon": "lack of english colon",
     "line": "line",
     "log download": "log download",
@@ -933,6 +934,7 @@
     "all issues": "all issues",
     "all iterations": "all iterations",
     "all tasks": "all tasks",
+    "all {name}": "all {name}",
     "analyze ID": "analyze ID",
     "analyze id": "analyze id",
     "analyzing": "analyzing",
@@ -944,6 +946,7 @@
     "app logo": "app logo",
     "app member": "app member",
     "app name": "app name",
+    "app release": "app release",
     "app release confirmation": "app release confirmation",
     "app repository address": "app repository address",
     "app types": "app types",
@@ -998,6 +1001,8 @@
     "basic information": "basic information",
     "batch processing": "batch processing",
     "batch-delete-tip-content": "the scanning rules will be permanently deleted",
+    "be formal": "be formal",
+    "be sure to make {name} official?": "be sure to make {name} official?",
     "belong to, not belong to": "Belong, Not belong",
     "belongs to": "belongs to",
     "bigData app": "bigData app",
@@ -1062,6 +1067,7 @@
     "clone application": "clone application",
     "cluster used by the environment": "cluster used by the environment",
     "code": "source",
+    "code branch": "code branch",
     "code content": "code content",
     "code coverage statistics": "code coverage statistics",
     "code defect": "code defect",
@@ -1273,6 +1279,7 @@
     "filter name": "filter name",
     "folder is created successfully": "folder is created successfully",
     "follow": "follow",
+    "formal": "formal",
     "four parameter references": "1. Input parameter reference for this scene: / $<< params.lab >>, and lab is input parameter name of the scene; 2. Output parameter reference for the front interface: / $<< outputs.10.status >>, and 10 is the interface ID, status is the output parameter name; 3. Mock parameter reference: / $<< random.string >>, and string is a function to randomly generate a string (includes integer, float, boolean, upper, lower, etc.); 4. Global environment variable reference: / $<< configs.autotest.cluster-name >>, and cluster-name is the environment variable name.",
     "gantt chart": "gantt chart",
     "general ability": "general ability",
@@ -1299,6 +1306,7 @@
     "if you want to import with XMind, please": "if you want to import with XMind, please",
     "image name": "image name",
     "image processing": "image processing",
+    "images list": "images list",
     "import and export tasks are in queue, there are export tasks({export}), import tasks({import}), please wait": "import and export tasks are in queue, there are export tasks({export}), import tasks({import}), please wait",
     "import file": "import file",
     "import parameters": "import parameters",
@@ -1309,6 +1317,7 @@
     "imported {total} item unsuccessfully": "imported {total} item unsuccessfully",
     "include existing tasks": "include existing tasks",
     "included tasks": "included tasks",
+    "informal": "informal",
     "initiated": "initiated",
     "input bug name": "input bug name",
     "input custom boards name": "input custom boards name",
@@ -1602,6 +1611,7 @@
     "project level app": "project level app",
     "project member": "project member",
     "project quota": "project quota",
+    "project release": "project release",
     "project updated successfully": "project updated successfully",
     "project-level-app-form-tip": "after setting as a project-level application, the pipeline of the application can directly call the pipelines of other applications of the project",
     "protect branch, not editable": "protect branch, not editable",
@@ -1864,6 +1874,7 @@
     "variable configuration": "variable configuration",
     "variable-config": "Configure your build to manage build variables for specific environments",
     "version details": "version details",
+    "version name": "version name",
     "version push": "version push",
     "view": "view",
     "view by iteration": "view by iteration",
