--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -730,6 +730,7 @@
     "item": "项",
     "items": "项",
     "key value must be unique": "key值必须唯一",
+    "keyword to search": "搜索关键字",
     "lack of english colon": "缺少英文冒号",
     "line": "行",
     "log download": "日志下载",
@@ -933,6 +934,7 @@
     "all issues": "全部事项",
     "all iterations": "所有迭代",
     "all tasks": "所有任务",
+    "all {name}": "全部{name}",
     "analyze ID": "分析 ID",
     "analyze id": "分析id",
     "analyzing": "正在分析",
@@ -944,6 +946,7 @@
     "app logo": "应用图标",
     "app member": "应用成员",
     "app name": "应用名称",
+    "app release": "应用制品",
     "app release confirmation": "应用发布确认",
     "app repository address": "应用仓库地址",
     "app types": "应用类型",
@@ -998,6 +1001,8 @@
     "basic information": "基本信息",
     "batch processing": "批量处理",
     "batch-delete-tip-content": "该扫描规则将永久删除",
+    "be formal": "转正式",
+    "be sure to make {name} official?": "确认将 {name} 转为正式制品?",
     "belong to, not belong to": "属于、不属于",
     "belongs to": "属于",
     "bigData app": "大数据应用",
@@ -1062,6 +1067,7 @@
     "clone application": "克隆应用",
     "cluster used by the environment": "环境所用的集群",
     "code": "代码浏览",
+    "code branch": "代码分支",
     "code content": "代码内容",
     "code coverage statistics": "代码覆盖率统计",
     "code defect": "代码缺陷",
@@ -1273,6 +1279,7 @@
     "filter name": "筛选器名称",
     "folder is created successfully": "创建文件夹成功",
     "follow": "关注",
+    "formal": "正式",
     "four parameter references": "1. 本场景的入参引用方法：/ $<< params.lab >>，其中 lab 为场景入参名;2. 前置接口出参引用方法：/ $<< outputs.10.status >>，其中 10 为接口 ID，status 为出参名称;3. mock 参数引用方法：/ $<< random.string >>， 其中 string 为随机生成字符串的函数（还包含 integer、float、boolean、upper、lower等）;4. 全局环境变量的引用方法：/ $<< configs.autotest.cluster-name >>，其中 cluster-name 为环境变量名",
     "gantt chart": "甘特图",
     "general ability": "通用能力",
@@ -1299,6 +1306,7 @@
     "if you want to import with XMind, please": "如需以 XMind 导入，请先",
     "image name": "镜像名称",
     "image processing": "图像处理",
+    "images list": "镜像列表",
     "import and export tasks are in queue, there are export tasks({export}), import tasks({import}), please wait": "导入导出任务正在排队中，前面还有导出任务({export})，导入任务({import})，请等待",
     "import file": "导入文件",
     "import parameters": "导入参数",
@@ -1309,6 +1317,7 @@
     "imported {total} item unsuccessfully": "导入失败{total}条",
     "include existing tasks": "包含已有任务",
     "included tasks": "包含的任务",
+    "informal": "非正式",
     "initiated": "我发起的",
     "input bug name": "输入缺陷名称",
     "input custom boards name": "请输入自定义看板名",
@@ -1602,6 +1611,7 @@
     "project level app": "项目级应用",
     "project member": "项目成员",
     "project quota": "项目配额",
+    "project release": "项目制品",
     "project updated successfully": "更新项目成功",
     "project-level-app-form-tip": "设置为项目级应用后，该应用的流水线中直接可以调用项目其他应用的流水线",
     "protect branch, not editable": "保护分支, 不可编辑",
@@ -1864,6 +1874,7 @@
     "variable configuration": "变量配置",
     "variable-config": "配置你的构建，用于管理特定环境的构建变量",
     "version details": "版本详情",
+    "version name": "版本名称",
     "version push": "版本推送",
     "view": "查看",
     "view by iteration": "按迭代查看",
