fix: fix some i18n and list tips error

--- a/locales/zh.json
+++ b/locales/zh.json
@@ -169,7 +169,7 @@
     "Virginia": "弗利尼亚",
     "Voice Template ID": "语音模板 ID",
     "Wed": "三",
-    "Welcome to a one-stop cloud native PaaS platform - Erda": "欢迎使用一站式云原生 PaaS 平台 - Erda",
+    "Welcome to the personal workbench": "欢迎进入个人工作台",
     "Welcome!": "欢迎！",
     "You can use ClientID and ClientSecret below to access API instance after approval.": "待审批通过后, 您可以使用以下的 ClientID 和 ClientSecret 访问 API 实例。",
     "You do not have enough permissions": "您的权限不足",
