--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1064,8 +1064,8 @@
     "choose certificate": "choose certificate",
     "choose module": "choose module",
     "choose the workflow file (master branch)": "choose the workflow file (master branch)",
-    "choose to set as a star app from the list of my apps below": "choose to set as a star app from the list of my apps below",
-    "choose to set as a star project from the list of my projects below": "choose to set as a star project from the list of my projects below",
+    "choose frequently used applications and set them as stars for easy operation": "choose frequently used applications and set them as stars for easy operation",
+    "choose frequently used project and set them as stars for easy operation": "choose frequently used project and set them as stars for easy operation",
     "circulation setting": "circulation setting",
     "class catalog": "class catalog",
     "click to add URL path": "click to add URL path",
