--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1064,8 +1064,8 @@
     "choose certificate": "选择证书",
     "choose module": "选择模块",
     "choose the workflow file (master branch)": "选择workflow文件（master分支）",
-    "choose to set as a star app from the list of my apps below": "从以下我的应用列表中选择设置为标星应用",
-    "choose to set as a star project from the list of my projects below": "从以下我的项目列表中选择设置为标星项目",
+    "choose frequently used applications and set them as stars for easy operation": "选择常用应用设置为星标，方便操作",
+    "choose frequently used project and set them as stars for easy operation": "选择常用项目设置为星标，方便操作",
     "circulation setting": "流转设置",
     "class catalog": "类目录",
     "click to add URL path": "单击添加 URL 路径",
