--- a/locales/en.json
+++ b/locales/en.json
@@ -169,7 +169,7 @@
     "Virginia": "Virginia",
     "Voice Template ID": "Voice Template ID",
     "Wed": "Wed",
-    "Welcome to a one-stop cloud native PaaS platform - Erda": "Welcome to a one-stop cloud native PaaS platform - Erda",
+    "Welcome to the personal workbench": "Welcome to the personal workbench",
     "Welcome!": "Welcome!",
     "You can use ClientID and ClientSecret below to access API instance after approval.": "You can use ClientID and ClientSecret below to access API instance after approval.",
     "You do not have enough permissions": "You do not have enough permissions",
