feat: personal contribute & active rank function (#2435)
* feat(dop): add personal contribute & active rank

* feat(common): add comment

* feat(dop): change api params

* feat(dop): i18n

* feat(dop): remove comment

* feat(dop): add search animation

* feat(common): upgrade tailwindcss to v3

* feat(dop): joint debugger

* feat(dop): import chart color

Co-authored-by: 随风 <daskyrk@users.noreply.github.com>

--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -906,6 +906,8 @@
     "ability app": "能力应用",
     "access control value": "门禁值",
     "account switching": "账号切换中",
+    "active ranking": "活跃排名",
+    "active value": "活跃值",
     "activity log": "活动日志",
     "actual value": "实际值",
     "add": "新增",
@@ -1085,6 +1087,7 @@
     "code smell": "代码异味",
     "code vulnerability": "代码脆弱点",
     "code-trigger-CI": "该分支代码发生变化时触发持续集成",
+    "collaboration items created/updated": "创建/更新了协同事项",
     "collapse file": "收起文件",
     "command": "命令",
     "comment area": "评论区",
@@ -1142,6 +1145,7 @@
     "create new file": "新建文件",
     "create new folder": "创建文件夹",
     "create test report": "生成测试报告",
+    "created/updated automated test cases": "创建/更新了自动化测试用例",
     "createdAt": "创建时间",
     "creating file is only allowed under the branch": "只能在分支下新建文件",
     "creating folder is only allowed under the branch": "只能在分支下新建文件夹",
@@ -1149,6 +1153,7 @@
     "creation method": "创建方式",
     "current": "当前",
     "current branch or path": "当前分支或路径",
+    "current month": "本月",
     "currently supports importing Excel files": "当前支持导入Excel类型文件",
     "currently supports importing Xmind and Excel files": "当前支持导入Xmind及Excel两种类型文件",
     "custom": "自定义",
@@ -1488,6 +1493,7 @@
     "notify role": "通知角色",
     "number of application instance": "应用实例数",
     "number of case": "用例数",
+    "number of code submissions": "提交代码次数",
     "number of interface passing": "接口通过数",
     "number of lines not covered": "未覆盖行数",
     "numeric type": "数值类型",
@@ -1528,6 +1534,7 @@
     "path must start with /": "path必须以 / 开头",
     "pending": "待处理",
     "permission configuration": "权限配置",
+    "personal contribution": "个人贡献",
     "pinned successfully": "置顶成功",
     "pipeline ID": "流水线ID",
     "pipeline configuration": "流水线配置",
@@ -1633,6 +1640,7 @@
     "push config": "推送配置",
     "push to variable config": "推送到变量配置",
     "quality reports": "质量报告",
+    "rank": "排名",
     "read only and inoperable": "只读模式，不可操作",
     "reason for rejection": "拒绝理由",
     "recent detection time": "最近检测时间",
@@ -1697,6 +1705,7 @@
     "search by owned project": "通过所在项目搜索",
     "search for": "搜索",
     "search label under project": "搜索项目下的标签",
+    "search name": "搜索姓名",
     "searchCenter": "搜索中心",
     "security": "安全",
     "select a business domain": "选择业务域",
