--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -906,6 +906,8 @@
     "ability app": "ability app",
     "access control value": "access control value",
     "account switching": "account switching",
+    "active ranking": "active ranking",
+    "active value": "active value",
     "activity log": "activity log",
     "actual value": "actual value",
     "add": "add",
@@ -1065,7 +1067,7 @@
     "choose module": "choose module",
     "choose the workflow file (master branch)": "choose the workflow file (master branch)",
     "choose frequently used applications and set them as stars for easy operation": "choose frequently used applications and set them as stars for easy operation",
-    "choose frequently used project and set them as stars for easy operation": "choose frequently used project and set them as stars for easy operation",
+    "choose frequently used project and set them as stars for easy operation": "choose frequently used project and set them as stars for easy operation
     "circulation setting": "circulation setting",
     "class catalog": "class catalog",
     "click to add URL path": "click to add URL path",
@@ -1085,6 +1087,7 @@
     "code smell": "code smell",
     "code vulnerability": "code vulnerability",
     "code-trigger-CI": "Continuous integration is triggered when the branch code changes",
+    "collaboration items created/updated": "collaboration items created/updated",
     "collapse file": "collapse file",
     "command": "command",
     "comment area": "comment area",
@@ -1142,6 +1145,7 @@
     "create new file": "create new file",
     "create new folder": "create new folder",
     "create test report": "create test report",
+    "created/updated automated test cases": "created/updated automated test cases",
     "createdAt": "createdAt",
     "creating file is only allowed under the branch": "creating file is only allowed under the branch",
     "creating folder is only allowed under the branch": "creating folder is only allowed under the branch",
@@ -1149,6 +1153,7 @@
     "creation method": "creation method",
     "current": "current",
     "current branch or path": "current branch or path",
+    "current month": "current month",
     "currently supports importing Excel files": "currently support importing Excel files",
     "currently supports importing Xmind and Excel files": "currently support importing Xmind and Excel two types of files",
     "custom": "custom",
@@ -1488,6 +1493,7 @@
     "notify role": "notify role",
     "number of application instance": "number of application instance",
     "number of case": "number of case",
+    "number of code submissions": "number of code submissions",
     "number of interface passing": "pass number",
     "number of lines not covered": "number of lines not covered",
     "numeric type": "numeric type",
@@ -1528,6 +1534,7 @@
     "path must start with /": "path must start with /",
     "pending": "pending",
     "permission configuration": "permission configuration",
+    "personal contribution": "personal contribution",
     "pinned successfully": "pinned successfully",
     "pipeline ID": "pipeline ID",
     "pipeline configuration": "pipeline configuration",
@@ -1633,6 +1640,7 @@
     "push config": "push config",
     "push to variable config": "push to variable config",
     "quality reports": "reports",
+    "rank": "rank",
     "read only and inoperable": "read only and inoperable",
     "reason for rejection": "reason for rejection",
     "recent detection time": "recent detection time",
@@ -1697,6 +1705,7 @@
     "search by owned project": "search by owned project",
     "search for": "search for",
     "search label under project": "search label under project",
+    "search name": "search name",
     "searchCenter": "searchCenter",
     "security": "security",
     "select a business domain": "select a business domain",
