--- a/locales/zh.json
+++ b/locales/zh.json
@@ -288,7 +288,7 @@
     "cannot contain special characters": "不能包含特殊字符",
     "cannot exceed 40 characters": "不能超过40个字符",
     "capacity type": "容量型",
-    "cellphone": "手机号",
+    "cellphone": "手机",
     "certificate": "证书",
     "change account permissions": "更改账号权限",
     "channel name": "渠道名称",
