fix(common): add list select empty style

--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -807,6 +807,7 @@
     "After the use case is selected, the batch operation can be performed.": "选中用例后，才能进行批量操作",
     "An Action with the same name exists.": "存在同名 Action!",
     "Applications": "应用开发",
+    "Applications release list top desc": "应用制品依赖于 pipeline 流水线中 release action 生成，制品生成的方式：1. release action 中明确输入 tag_version，指定具体的制品版本；2. 否则只有 release 分支代码构建的制品才会推送到应用制品，比如 release/1.1.3 分支生成的制品版本名：1.1.3-2021-12-30-134348。",
     "Are you sure to delete in batches?": "确定批量删除吗？",
     "Are you sure to disinclude {name}": "确认与 {name} 解除包含关系吗",
     "Are you sure to leave, with the error message not saved?": "是否确认离开，离开将不保存错误信息",
@@ -1462,6 +1463,7 @@
     "no attention": "无人关注",
     "no change": "无任何变更",
     "no changes to merge": "没有需要合并的变更",
+    "no choice {name}": "暂未选择{name}",
     "no comparison branch selected": "未选择对比分支",
     "no content yet": "暂无内容",
     "no data, please confirm if there is a corresponding test code": "暂无数据,请确认是否有对应测试代码",
@@ -1472,6 +1474,7 @@
     "no member is concerned about it": "暂无成员关注",
     "no more than 30 characters": "不超过30个字符",
     "no time logged": "无记录的时间",
+    "no {name}": "暂无{name}",
     "node params": "节点入参",
     "node reference": "引用节点",
     "normal": "一般",
