--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -831,7 +831,6 @@
     "Format must be 2w 3d 4h 5m": "格式必须为 2w 3d 4h 5m",
     "Function unavailable in network block period.": "封网期间不可使用该功能！",
     "Git reference": "Git 引用",
-    "home page": "主页",
     "If it is a bugfix, please add a test case proving that the bug is fixed.": "如果是 bugfix，请增加证明 bug 解决的 testcase",
     "If you choose to configure an external code repository, the DevOps platform will no longer provide functions such as  code browsing, submission history viewing, branch management or merge requests. Other functions such as pipeline and deployment will not be affected.": "选择配置外置代码仓库后，DevOps 平台将不再提供代码浏览、提交历史查看、分支管理和合并请求等在线代码仓库功能，流水线和部署中心等其他功能不受影响。",
     "It can only be dragged to the end of the corresponding month. Please go to the details page for better modification.": "本次拖拽只能拖拽至对应月末, 请至详情页进行精确修改",
@@ -1225,6 +1224,7 @@
     "email": "邮箱",
     "emergency level": "紧急程度",
     "empty, not empty": "为空、不为空",
+    "empty-markdown-content": "\n### readme\n\n\n*此处可以尽情发挥你文档小能手的才华*\n\n*可以通过一段酷炫的图文让项目成员都清楚项目的背景、目标等信息*\n\n*也可以共享项目文档、规范等材料*\n\n*还可以...*",
     "encrypt": "是否加密",
     "encrypted files cannot be downloaded": "加密文件不可下载",
     "end date": "结束日期",
@@ -1311,6 +1311,7 @@
     "help you better organize your notifications": "帮助您更好地组织通知项",
     "high": "紧急",
     "historical analysis": "历史分析",
+    "home page": "主页",
     "host address": "主机地址",
     "hosts mapping": "Hosts 映射",
     "how to start": "如何开始",
