fix: fix project homepage default background image

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1620,6 +1620,7 @@
     "private project": "private project",
     "professional edition": "professional edition",
     "progress": "progress",
+    "project-img-copyright-tip": "* image by Scott Webb on Pexels",
     "project admin confirming": "project admin confirming",
     "project collaboration": "project collaboration",
     "project created successfully": "project created successfully",
