--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1620,6 +1620,7 @@
     "private project": "私有项目",
     "professional edition": "专业版",
     "progress": "进度",
+    "project-img-copyright-tip": "* Pexels 上的 Scott Webb 拍摄的图片",
     "project admin confirming": "项目管理员确认中",
     "project collaboration": "项目协同",
     "project created successfully": "创建项目成功",
