Hotfix/workbench style (#2460)
* fix: fix persnal workbench style

* fix: fix rds button tips

* fix: fix i18n in workbench

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1087,7 +1087,7 @@
     "code smell": "code smell",
     "code vulnerability": "code vulnerability",
     "code-trigger-CI": "Continuous integration is triggered when the branch code changes",
-    "collaboration items created/updated": "collaboration items created/updated",
+    "project cooperative participation index": "project cooperative participation index",
     "collapse file": "collapse file",
     "command": "command",
     "comment area": "comment area",
@@ -1145,7 +1145,7 @@
     "create new file": "create new file",
     "create new folder": "create new folder",
     "create test report": "create test report",
-    "created/updated automated test cases": "created/updated automated test cases",
+    "project quality assurance contribution index": "project quality assurance contribution index",
     "createdAt": "createdAt",
     "creating file is only allowed under the branch": "creating file is only allowed under the branch",
     "creating folder is only allowed under the branch": "creating folder is only allowed under the branch",
@@ -1497,7 +1497,7 @@
     "notify role": "notify role",
     "number of application instance": "number of application instance",
     "number of case": "number of case",
-    "number of code submissions": "number of code submissions",
+    "code production index": "code production index",
     "number of interface passing": "pass number",
     "number of lines not covered": "number of lines not covered",
     "numeric type": "numeric type",
