--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1087,7 +1087,7 @@
     "code smell": "代码异味",
     "code vulnerability": "代码脆弱点",
     "code-trigger-CI": "该分支代码发生变化时触发持续集成",
-    "collaboration items created/updated": "创建/更新了协同事项",
+    "project cooperative participation index": "项目协同参与指数",
     "collapse file": "收起文件",
     "command": "命令",
     "comment area": "评论区",
@@ -1145,7 +1145,7 @@
     "create new file": "新建文件",
     "create new folder": "创建文件夹",
     "create test report": "生成测试报告",
-    "created/updated automated test cases": "创建/更新了自动化测试用例",
+    "project quality assurance contribution index": "项目质量保证贡献指数",
     "createdAt": "创建时间",
     "creating file is only allowed under the branch": "只能在分支下新建文件",
     "creating folder is only allowed under the branch": "只能在分支下新建文件夹",
@@ -1497,7 +1497,7 @@
     "notify role": "通知角色",
     "number of application instance": "应用实例数",
     "number of case": "用例数",
-    "number of code submissions": "提交代码次数",
+    "code production index": "代码生产指数",
     "number of interface passing": "接口通过数",
     "number of lines not covered": "未覆盖行数",
     "numeric type": "数值类型",
