fix: delete public org in workbench / fix styles

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -906,8 +906,8 @@
     "ability app": "ability app",
     "access control value": "access control value",
     "account switching": "account switching",
-    "active ranking": "active ranking",
-    "active value": "active value",
+    "contribution ranking": "contribution ranking",
+    "contribution value": "contribution value",
     "activity log": "activity log",
     "actual value": "actual value",
     "add": "add",
