--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -906,8 +906,8 @@
     "ability app": "能力应用",
     "access control value": "门禁值",
     "account switching": "账号切换中",
-    "active ranking": "活跃排名",
-    "active value": "活跃值",
+    "contribution ranking": "贡献排名",
+    "contribution value": "贡献值",
     "activity log": "活动日志",
     "actual value": "实际值",
     "add": "新增",
