fix: fix greeting word

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -896,7 +896,7 @@
     "Time spent": "Time spent",
     "Time tracking": "Time tracking",
     "Today": "T",
-    "Tody is {time}": "Tody is {time}",
+    "Today is {time}": "Today is {time}",
     "Up to 255 characters for directory name": "Up to 255 characters for directory name",
     "Up to 255 characters for url path": "Up to 255 characters for url path",
     "When enabled, application deployment needs to be reviewed and approved by the project administrator.": "When enabled, application deployment needs to be reviewed and approved by the project administrator.",
