--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -896,7 +896,7 @@
     "Time spent": "所用时间",
     "Time tracking": "时间跟踪",
     "Today": "今",
-    "Tody is {time}": "今天是{time}",
+    "Today is {time}": "今天是 {time}",
     "Up to 255 characters for directory name": "目录名最大长度255",
     "Up to 255 characters for url path": "url 路径最多255个字符",
     "When enabled, application deployment needs to be reviewed and approved by the project administrator.": "开启后，相关应用部署需要项目管理员审核同意后才能继续进行",
