fix(dop): project release management text adjustment

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1664,6 +1664,7 @@
     "related to existing issues": "related to existing issues",
     "related to these issues": "related to these issues",
     "relation added successfully": "relation added successfully",
+    "release name": "release name",
     "release relationship": "release relationship",
     "release version": "release version",
     "remark": "remark",
