--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1664,6 +1664,7 @@
     "related to existing issues": "关联已有事项",
     "related to these issues": "关联了以下事项",
     "relation added successfully": "添加关联成功",
+    "release name": "制品名称",
     "release relationship": "解除关系",
     "release version": "发布版本",
     "remark": "备注",
