feat(msp): rename tab name
feat(msp): remove extra entry

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -2088,6 +2088,7 @@
     "business strategy": "business strategy",
     "cache time": "cache time",
     "call control": "call control",
+    "call monitor": "call monitor",
     "call type": "call type",
     "caller authorization": "caller authorization",
     "caller description": "caller description",
