feat: refactor transaction (#2478)
* feat: add table version 2 in config page

feat: tr

feat(msp): refactor transaction

feat(msp): refactor transaction

feat(msp): refactor transaction

feat(msp): refactor transaction

* feat(msp): refactor transaction

* feat(msp): remove mock

feat(msp): remove empty file

feat(msp): adjust chart grid

* feat(msp): rename tab name

feat(msp): remove extra entry

* feat(msp): rename mode to theme

Co-authored-by: 老俊 <782803291@qq.com>

--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -2086,6 +2086,7 @@
     "business strategy": "业务策略",
     "cache time": "缓存时间",
     "call control": "调用量控制",
+    "call monitor": "调用监控",
     "call type": "调用类型",
     "caller authorization": "调用方授权",
     "caller description": "调用方描述",
