feat(dop): project release add by upload file

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1068,6 +1068,7 @@
     "choose the workflow file (master branch)": "choose the workflow file (master branch)",
     "circulation setting": "circulation setting",
     "class catalog": "class catalog",
+    "click this area to browse and upload": "click this area to browse and upload",
     "click to add URL path": "click to add URL path",
     "click to edit": "click to edit",
     "click to expand": "click to expand",
@@ -1279,6 +1280,7 @@
     "file must be smaller than 20 MB": "file must be smaller than 20 MB",
     "file name": "file name",
     "file path": "file path",
+    "file type error": "file type error",
     "files": "files",
     "filter by alarm type": "filter by alarm type",
     "filter by application name": "filter by application name",
@@ -1610,6 +1612,7 @@
     "please select the version": "please select the version",
     "please set": "please set",
     "please set ": "please set ",
+    "please upload files": "please upload files",
     "plugin deployment": "plugin deployment",
     "port cannot be empty": "port cannot be empty",
     "ports": "ports",
@@ -1717,7 +1720,9 @@
     "select a document": "select a document",
     "select a market area": "select a market area",
     "select all": "select all",
+    "select apps create": "select apps create",
     "select data domain": "select data domain",
+    "select file create": "select file create",
     "select group": "select group",
     "select instance": "select instance",
     "select iteration": "select iteration",
@@ -1886,6 +1891,7 @@
     "updater": "updater",
     "upgrade log": "upgrade log",
     "upload files": "upload files",
+    "upload yml file": "upload yml file",
     "upload-file-tip": "The file is located in the /.pipeline/container/cms/dice_files directory in the container, the file name is the configured Key, and the file content is the uploaded file",
     "uploading, please do not leave": "uploading, please do not leave",
     "urgent": "urgent",
