--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1068,6 +1068,7 @@
     "choose the workflow file (master branch)": "选择workflow文件（master分支）",
     "circulation setting": "流转设置",
     "class catalog": "类目录",
+    "click this area to browse and upload": "点击此区域进行浏览上传",
     "click to add URL path": "单击添加 URL 路径",
     "click to edit": "点击即可编辑",
     "click to expand": "点击展开",
@@ -1279,6 +1280,7 @@
     "file must be smaller than 20 MB": "文件必须小于 20MB！",
     "file name": "文件名",
     "file path": "文件路径",
+    "file type error": "文件类型错误",
     "files": "代码仓库",
     "filter by alarm type": "按告警类型过滤",
     "filter by application name": "通过所在应用名过滤",
@@ -1610,6 +1612,7 @@
     "please select the version": "请选择版本",
     "please set": "请设置",
     "please set ": "请设置",
+    "please upload files": "请上传文件",
     "plugin deployment": "插件部署",
     "port cannot be empty": "端口不能为空",
     "ports": "端口",
@@ -1717,7 +1720,9 @@
     "select a document": "选择文件",
     "select a market area": "选择集市域",
     "select all": "全选",
+    "select apps create": "选择应用创建",
     "select data domain": "选择数据域",
+    "select file create": "选择文件创建",
     "select group": "选择群组",
     "select instance": "选择实例",
     "select iteration": "选择迭代",
@@ -1886,6 +1891,7 @@
     "updater": "更新人",
     "upgrade log": "升级日志",
     "upload files": "上传文件",
+    "upload yml file": "上传yml文件",
     "upload-file-tip": "文件位于容器内 /.pipeline/container/cms/dice_files目录下, 文件名为配置时的 key 值, 文件内容即为上传的文件",
     "uploading, please do not leave": "上传中，请勿离开",
     "urgent": "紧急",
