fix: rename rps label name

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -2055,6 +2055,7 @@
     "average load time": "average load time",
     "average load time - browser type": "average load time - browser type",
     "average load time - device type": "average load time - device type",
+    "average request volume": "average request volume",
     "average response time": "average response time",
     "average throughput": "average throughput",
     "average time": "average time",
@@ -2318,7 +2319,7 @@
     "maximum number of queries": "maximum number of queries",
     "maximum number of retries": "maximum number of retries",
     "maximum number of waiting requests": "maximum number of waiting requests",
-    "maximum throughput": "maximum throughput",
+    "maximum request volume": "maximum request volume",
     "maximum time consuming": "maximum time consuming",
     "maximum value": "maximum value",
     "memory usage limit": "memory usage limit",
