--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -2055,6 +2055,7 @@
     "average load time": "平均加载时间",
     "average load time - browser type": "平均加载时间-浏览器类型",
     "average load time - device type": "平均加载时间-设备类型",
+    "average request volume": "平均请求量",
     "average response time": "平均响应时间",
     "average throughput": "平均吞吐量",
     "average time": "平均时间",
@@ -2318,7 +2319,7 @@
     "maximum number of queries": "最大查询条数",
     "maximum number of retries": "最大重试次数",
     "maximum number of waiting requests": "最大等待请求数",
-    "maximum throughput": "最大吞吐量",
+    "maximum request volume": "最大请求量",
     "maximum time consuming": "最大耗时",
     "maximum value": "最大值",
     "memory usage limit": "内存使用限制",
