feat: add land page

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1942,6 +1942,10 @@
     "site management": "site management"
   },
   "layout": {
+    "Choose your organization space": "Choose your organization space",
+    "Global optimization": "Global optimization",
+    "Help enterprises to create an agile R & D organization": "Help enterprises to create an agile R & D organization",
+    "Organizational space": "Organizational space",
     "announcement": "announcement",
     "approval": "approval",
     "back to application list": "back to application list",
