--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1942,6 +1942,10 @@
     "site management": "站点管理"
   },
   "layout": {
+    "Choose your organization space": "选择您的组织空间",
+    "Global optimization": "全局优化",
+    "Help enterprises to create an agile R & D organization": "助力企业打造敏捷型研发组织",
+    "Organizational space": "组织空间",
     "announcement": "公告",
     "approval": "审批管理",
     "back to application list": "返回应用列表",
