fix(org): certificate fields can not contain space

--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -645,6 +645,8 @@
   "common": {
     "Application and application roles need to be set at the same time": "应用和应用角色需同时设置",
     "Are you sure to quit?": "您确认要退出",
+    "Cannot contain spaces": "不能包含空格",
+    "Cannot contain spaces, length is {min}~{max}": "不能包含空格，长度为{min}~{max}",
     "DEFAULT": "默认",
     "DEV": "开发",
     "Filter conditions": "筛选过滤条件",
@@ -697,7 +699,6 @@
     "default value only takes effect in the generated form": "默认值只在生成后的表单中生效",
     "delete current {deleteItem}": "删除当前{deleteItem}",
     "delete service": "删除服务",
-    "discard": "丢弃变更",
     "double confirm": "再次确认",
     "download log": "下载日志",
     "duration(minutes)": "时长(分钟)",
@@ -1805,7 +1806,6 @@
     "task name": "任务名称",
     "task params": "任务参数",
     "template select": "模板选择",
-    "temporary storage": "暂存",
     "terminate": "终止",
     "test case": "测试用例",
     "test days": "测试天数",
@@ -1963,13 +1963,11 @@
     "API policies": "API策略",
     "API prefix": "API前缀",
     "API source": "API 来源",
-    "AVG TIME DELAY DESC": "平均延迟倒序",
     "Cache call": "缓存调用",
     "Choose different indicators and user features for comparative analysis for different business types and scenarios, to locate issues accurately.": "不同的业务类型和业务场景选择不同的指标和用户特征进行对比分析，精准定位问题所在",
     "DNS parsing times": "DNS解析次数",
     "Database call": "数据库调用",
     "DevOps Project": "研发项目",
-    "ERROR COUNT DESC": "错误次数倒序",
     "Erda service": "Erda服务",
     "Failed to cancel. Please try again late.": "取消失败，请稍后重试",
     "Flame Graph": "火焰图",
@@ -1988,7 +1986,6 @@
     "Please enter a name consisting of letters, numbers, underscores, hyphens, slashes and dots within 50 characters.": "请输入50个字符内英文、数字、_、-、/, . 组成的名称",
     "Please enter your DingTalk address, separated by comma.": "请输入钉钉地址，用“,”分隔",
     "Provides one-stop service system observation, including service monitoring, tracing, dashboard, and alarm.": "提供一站式的服务系统观测，包括服务监控、链路追踪、仪表盘和告警等功能。",
-    "REQUEST COUNT DESC": "调用次数倒序",
     "RPC call": "RPC 调用",
     "RPC transaction": "RPC事务",
     "The selected interface weight will be set to": "所选接口权重将置为",
@@ -2094,7 +2091,6 @@
     "cache time": "缓存时间",
     "call control": "调用量控制",
     "call monitor": "调用监控",
-    "call type": "调用类型",
     "caller authorization": "调用方授权",
     "caller description": "调用方描述",
     "caller name": "调用方名称",
@@ -2184,8 +2180,6 @@
     "downtime": "宕机",
     "dubbo protocol": "Dubbo 协议",
     "duration": "持续时间",
-    "duration asc": "耗时升序",
-    "duration desc": "耗时降序",
     "earlier": "更早",
     "edit a endpoint": "编辑流量入口",
     "edit analysis rule": "编辑分析规则",
@@ -2326,6 +2320,7 @@
     "maximum number of retries": "最大重试次数",
     "maximum number of waiting requests": "最大等待请求数",
     "maximum request volume": "最大请求量",
+    "maximum throughput": "最大吞吐量",
     "maximum time consuming": "最大耗时",
     "maximum value": "最大值",
     "memory usage limit": "内存使用限制",
@@ -2412,7 +2407,6 @@
     "prev": "上一步",
     "previous": "上一个",
     "process": "进程分析",
-    "producer": "生产者",
     "project report": "项目报告",
     "proportion": "占比",
     "province": "省份",
@@ -2462,11 +2456,9 @@
     "script error": "脚本错误",
     "script execution": "脚本执行",
     "search by API": "输入API查找",
-    "search by Topic": "按 Topic 搜索",
     "search by name": "通过名称过滤搜索",
     "search by project name": "搜索项目",
     "search by service name": "按服务名搜索",
-    "search by transaction name": "按事务名称搜索",
     "search for": "搜索",
     "search guide": "支持操作符 AND 和 OR 和 NOT，同时支持使用()分组",
     "second(s)": "秒",
@@ -2535,8 +2527,6 @@
     "throughput - browser type": "吞吐量-浏览器类型",
     "throughput - device type": "吞吐量-设备类型",
     "throughput TOP 5": "吞吐量TOP5",
-    "time ascending": "时间升序",
-    "time desc": "时间降序",
     "time of occurrence": "发生时间",
     "time percentage": "时间百分比",
     "time-consuming(ms)": "耗时(ms)",
@@ -2562,7 +2552,6 @@
     "traffic intercept switch": "流量拦截开关",
     "traffic limit": "调用量限制",
     "traffic receive forwarding": "流量接收转发",
-    "transaction": "事务分析",
     "transactions": "链路追踪",
     "transmission analysis": "传输分析",
     "transmission traffic": "传输流量",
